--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node ."
+  },
   "devDependencies": {
-    "@types/node": "^15.12.4"
+    "@types/node": "^15.12.4",
+    "typescript": "^4.3.4"
   },
   "dependencies": {
-    "apollo": "^2.33.4",
     "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "graphql": "^14.7.0",
+    "web3": "^1.3.6"
   }
 }
